objects/FLODocs__FLO_Custo_Profile_PS_Field_Permission__c.object
<CustomObject>
    <fields>
        <fullName>FLODocs__Customization__c</fullName>
        <label>Customization</label>
        <referenceTo>FLODocs__FLO_Customization__c</referenceTo>
        <relationshipLabel>FLO Custo Profile PS Field Permissions</relationshipLabel>
        <relationshipName>FLO_Custo_Profile_PS_Field_Permissions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FLODocs__Profile_Field_Permissions_10__c</fullName>
        <label>Profile Field Permissions 10</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Profile_Field_Permissions_1__c</fullName>
        <label>Profile Field Permissions 1</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Profile_Field_Permissions_2__c</fullName>
        <label>Profile Field Permissions 2</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <label>FLO Custo Profile PS Field Permission</label>
    <nameField>
        <label>FLO Custo Profile PS Field Permission Na</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FLO Custo Profile PS Field Permissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>